--- a/public/static/index.html
+++ b/public/static/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div ng-controller="FibController">
-			<span>Finbonacci Number</span>
+			<span>Fibonacci Number</span>
 			<input type="text" ng-model="n">
 			<button ng-click='updateFib()'>Get Fib</button>
 			<hr>
