--- a/public/static/index.html
+++ b/public/static/index.html
@@ -2,6 +2,7 @@
 <html ng-app="fibApp">
 	<head>
 		<title>Fibonacci</title>
+		<link href="/libs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 	</head>
 	<body>
 		<div ng-controller="FibController">
@@ -11,7 +12,9 @@
 			<hr>
 			{{ Fibn }}
 		</div>
-		<script src="http://code.angularjs.org/1.2.0/angular.js"></script>
+		<script src="/libs/angular/angular.js"></script>
+		<script src="/libs/jquery/dist/jquery.js"></script>
+		<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/fib.js"></script>
 	</body>
 </html>
