--- a/public/static/index.html
+++ b/public/static/index.html
@@ -60,7 +60,9 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					{{ Fibn }}
+					<div class="col-md-4">
+						<p>{{ Fibn }}</p>
+					</div>
 				</div>
 			</div>
 		</div>
