added stock chart

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -65,12 +65,22 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<div id="fibChart" width="400" height="400"></div>
+					</div>
+				</div>
+			</div>
+
+		</div>
 
 		<script src="/libs/angular/angular.js"></script>
 		<script src="/libs/jquery/dist/jquery.js"></script>
 		<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="/libs/chartjs/Chart.js"></script>
+		<script src="/libs/highstock-release/highstock.js"></script>
 		<script src="/fib.js"></script>
 	</body>
 </html>
